# vp-cpp-template

./: .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile_cppdevbase  Dockerfile_localDev  Documentation.odt  LICENSE  README.md
.github/workflows/: main.yml
BuildSystems/: BuildConfigurations.cmake  config  detachProjectFromGit.sh
BuildSystems/emptyProject/: .gitlab-ci.yml  Dockerfile_localDev  Main.cpp  main.yml  moduleTestsList.csv  newModule.cpp
BuildSystems/emptyProject/my-ubuntu64/: CMakeLists.txt
BuildSystems/emptyProject/my-win64/: CMakeLists.txt
BuildSystems/my-ubuntu64/: CMakeLists.txt  build-All.sh  cmake-build.sh  detachProjectFromGit.sh  emptyProject.sh  make-build.sh  rmake-build.sh  test-main.sh
BuildSystems/my-ubuntu64/Libs/ExampleCAPI/: CMakeLists.txt  cmake-build.sh  make-build.sh  rmake-build.sh
BuildSystems/my-ubuntu64/Libs/ExampleCTypes/: CMakeLists.txt  cmake-build.sh  make-build.sh  rmake-build.sh
BuildSystems/my-ubuntu64/Libs/vp-cpp-template-extlibs/: CMakeLists.txt  cmake-build.sh  rmake-build.sh
BuildSystems/my-win64/: CMakeLists.txt  build-All.cmd  cmake-build.cmd  emptyProject.cmd  make-build.cmd  rmake-build.cmd  test-main.cmd
BuildSystems/my-win64/Libs/ExampleCAPI/: CMakeLists.txt  cmake-build.cmd  make-build.cmd  rmake-build.cmd
BuildSystems/my-win64/Libs/ExampleCTypes/: CMakeLists.txt  cmake-build.cmd  make-build.cmd  rmake-build.cmd
BuildSystems/my-win64/Libs/vp-cpp-template-extlibs/: CMakeLists.txt  cmake-build.cmd  rmake-build.cmd
BuildVersion/: BuildUpdateBuildVersion.sh  BuildVersion.hpp  TagReleaseVersion.py  UpdateBuildVersion
C++/: .gitignore
C++/Common/: Common.cpp  Common.hpp  vp-cpp-template.hpp
C++/Libs/ExampleCAPI/API-Headers/: ExampleCAPI.hpp
C++/Libs/ExampleCAPI/include/: DummyClass.hpp
C++/Libs/ExampleCAPI/src/: DummyClass.cpp  ExampleCAPI.cpp
C++/Libs/ExampleCTypes/API-Headers/: ExampleCTypes.hpp
C++/Libs/ExampleCTypes/src/: ExampleCTypes.cpp
C++/Libs/vp-cpp-template-extlibs/API-Headers/: vp-cpp-teamplate-extlibs.hpp
C++/Libs/vp-cpp-template-extlibs/src/: vp-cpp-template-CAPI.cpp
C++/include/: Example.hpp
C++/src/: Example.cpp  Main.cpp  ModuleTesting.cpp  TestExampleCAPI.cpp  TestVkpCSVHandler.cpp
C++/src/ModuleTests/: Example.cpp  TestCLIReader.cpp  TestOpenCV.cpp
C++/src/ModuleTests/include/: TestOpenCV.hpp
C++/src/include/: Example.hpp  Main.hpp  TestExampleCAPI.hpp  TestVkpCSVHandler.hpp  vp-cpp-template.hpp
python/: .gitignore  ExampleCTypes.py  Test.py
python/BuildVersion/: __init__.py  setup.py
workdir/: .gitignore  confExample.cfg  confModuleTesting-Ubuntu.cfg  confModuleTesting-Windows.cfg  confTestExample.cfg  confTestVkpCSVHandler.cfg  moduleTestsList.csv  test-setup.cfg
workdir/moduleTests/: confExample.cfg
